# bgm

./: CMakeLists.txt
cmake/: common_defines.cmake  depends_gtest.cmake  depends_spdlog.cmake  enable_standalone_debug.cmake  target_set_cxx_standard.cmake  vars.cmake
include/bgm/: NamespaceDefines.hpp  sql.hpp
src/bgm/: CMakeLists.txt  sql.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt
test/src/bgm/: CMakeLists.txt  foo.cpp
test/src/bgm/gtest/: CMakeLists.txt  TestSql.cpp
